module/core/diagnostics_tools/tests/inc/snipet/cta_true_fail.rs
use test_tools::diagnostics_tools::*;

fn main()
{
  cta_true!( feature = "unknown" );
}
